# rust-aoc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: static.yml
aoc-2015-1/: Cargo.toml
aoc-2015-1/src/: main.rs
aoc-2015-10/: Cargo.toml
aoc-2015-10/src/: main.rs
aoc-2015-11/: Cargo.toml
aoc-2015-11/src/: main.rs
aoc-2015-12/: Cargo.toml
aoc-2015-12/src/: main.rs
aoc-2015-13/: Cargo.toml
aoc-2015-13/src/: main.rs
aoc-2015-14/: Cargo.toml
aoc-2015-14/src/: main.rs
aoc-2015-15/: Cargo.toml
aoc-2015-15/src/: main.rs
aoc-2015-16/: Cargo.toml
aoc-2015-16/src/: main.rs
aoc-2015-17/: Cargo.toml
aoc-2015-17/src/: main.rs
aoc-2015-18/: Cargo.toml
aoc-2015-18/src/: main.rs
aoc-2015-2/: Cargo.toml
aoc-2015-2/src/: main.rs
aoc-2015-3/: Cargo.toml
aoc-2015-3/src/: main.rs
aoc-2015-4/: Cargo.toml
aoc-2015-4/src/: main.rs
aoc-2015-5/: Cargo.toml
aoc-2015-5/src/: main.rs
aoc-2015-6/: Cargo.toml
aoc-2015-6/src/: main.rs
aoc-2015-7/: Cargo.toml
aoc-2015-7/src/: main.rs
aoc-2015-8/: Cargo.toml
aoc-2015-8/src/: main.rs
aoc-2015-9/: Cargo.toml
aoc-2015-9/src/: main.rs
aoc-cli/: Cargo.toml
aoc-cli/src/: main.rs
aoc-example/: Cargo.toml
aoc-example/src/: main.rs
aoc-gen-new/: Cargo.toml
aoc-gen-new/src/: main.rs
aoc-gui/: index.html  style.css
aoc-lib/: Cargo.toml
aoc-lib/src/: lib.rs
aoc-solutions/: Cargo.toml
aoc-solutions/src/: lib.rs
cargo-aoc/: Cargo.toml
cargo-aoc/src/: main.rs
