[workspace]
resolver = "3"
members = [
    "aoc-lib",
    "aoc-example",
    "aoc-gen-new",
    "aoc-2015-1",
    "aoc-2015-2",
    "aoc-2015-3",
    "aoc-2015-4",
    "aoc-2015-5",
    "aoc-2015-6",
    "aoc-2015-7",
    "aoc-2015-8",
    "aoc-2015-9",
    "aoc-2015-10",
    "aoc-2015-11"
, "aoc-2015-12"]
